# shuffle

./: .gitignore  ALGORITHM_FLOWCHART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  technical_walkthrough.md  testing_results.md
assessment/: README.md
assessment/results/: FINAL_RISK_ASSESSMENT.md  configuration_analysis.json  sample_selection.json  sample_selection.txt
assessment/results/metrics/: hwe_analysis.json  per_sample_metrics.json  per_sample_summary.csv
assessment/scripts/: 1_select_samples.py  2_compute_metrics.py  3_hwe_analysis.py  3_hwe_analysis_python.py  4_create_visualizations.py  5_analyze_configuration.py  6_generate_final_report.py
scripts/: run_shuffle_cohort.sh
tests/: conftest.py  test_cli.py  test_empirical_tier1.py  test_empirical_tier2.py  test_empirical_tier3.py  test_genetic_map.py  test_mosaic_builder.py  test_patient_end_to_end.py  test_recombination.py  test_sex_filter.py  test_vcf_io.py
v_shuffler/: __init__.py  __main__.py  cli.py  config.py  validate.py
v_shuffler/core/: genotype_pool.py  mosaic_builder.py  recombination.py
v_shuffler/io/: genetic_map.py  sex_map.py  vcf_reader.py  vcf_writer.py
