[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v-shuffler"
version = "0.1.0"
description = "Shuffle variants between VCF files using simulated genetic recombination"
requires-python = ">=3.10"
dependencies = [
    "cyvcf2>=0.30.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "pysam>=0.21.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[project.scripts]
v-shuffler = "v_shuffler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["v_shuffler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
